--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -54,7 +54,7 @@
 .header {
   width: 100vw;
   height: 60rem;
-  background-image: url(../../img/mainbg.png);
+  background-image: url(../img/mainbg.png);
   @include bgimg;
 
   &__txt {
