--- a/scss/pages/_project1.scss
+++ b/scss/pages/_project1.scss
@@ -135,14 +135,14 @@
       border-radius: 1.5rem;
 
       &--1 {
-        background-image: url(../../img/i-notice.png);
+        background-image: url(../img/i-notice.png);
       }
       &--2 {
-        background-image: url(../../img/i-donate.png);
+        background-image: url(../img/i-donate.png);
       }
 
       &--3 {
-        background-image: url(../../img/i-basket.png);
+        background-image: url(../img/i-basket.png);
       }
     }
   }
