--- a/css/style.css
+++ b/css/style.css
@@ -36,15 +36,15 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .wrapper { margin-top: 5rem; }
 
-.header { width: 100vw; height: 60rem; background-image: url(../img/mainbg.png); background-repeat: no-repeat; background-position: center; background-size: cover; }
+.header { width: 100%; height: 60rem; background-image: url(../img/mainbg.png); background-color: #fff4e9; background-repeat: no-repeat; background-position: center; background-size: cover; background-size: contain; }
 
 .header__txt { position: relative; top: 30%; left: 10%; }
 
 .header__txt p { font-size: 2.4rem; }
 
-.profile { width: 130rem; height: 92rem; margin: 0 auto; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.profile { width: 130rem; height: 92rem; margin: 0 auto; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; background-color: #000; }
 
-.profile__img { width: 39rem; height: 50rem; background-image: url(../img/profile.png); background-repeat: no-repeat; background-position: center; background-size: cover; }
+.profile__img { width: 39rem; height: 50rem; background-repeat: no-repeat; background-position: center; background-size: cover; background-color: aqua; }
 
 .profile__img::after { content: ""; width: 84%; height: 90%; display: inline-block; position: relative; top: -12rem; left: -12rem; z-index: -1; background-color: #ffdcf0; }
 
@@ -76,9 +76,9 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .profile__bottom h6 { color: #929292; margin-bottom: 1.8rem; }
 
-.pro1 { width: 100vw; }
+.pro1 { width: 100%; }
 
-.pro1__top { width: 100vw; height: 100rem; background-color: #f7f7f7; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
+.pro1__top { width: 100%; height: 100rem; background-color: #f7f7f7; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
 
 .pro1__top h4 { margin-bottom: 2rem; }
 
@@ -144,19 +144,23 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .dot--3 { background-color: #f5af1b; }
 
-.pro2 { width: 100vw; }
+.pro2 { width: 100%; }
 
-.pro2__top { width: 100vw; height: 100rem; background-color: #535353; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; position: relative; z-index: -1; color: #fff; }
+.pro2__top { width: 100%; height: 100rem; background-color: #535353; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; position: relative; z-index: -1; color: #fff; }
 
 .pro2__top::before { content: ""; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; background: url(../img/jeju-mockup.png); opacity: 0.5; background-repeat: no-repeat; background-position: center; background-size: cover; z-index: -1; }
 
 .pro2__top h4 { margin-bottom: 2rem; }
 
-.pro2__top .pro2__imgbox { display: -webkit-box; display: -ms-flexbox; display: flex; margin-top: 4rem; }
+.pro2__top .pro2__imgbox { width: 100rem; margin-top: 4rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 
-.pro2__top .pro2__img { width: 46.8rem; height: 66.3rem; background-repeat: no-repeat; background-position: center; background-size: cover; }
+.pro2__top .pro2__img { width: 46.8rem; background-color: #000; background-repeat: no-repeat; background-position: center; background-size: cover; }
 
-.pro2__top .pro2__img--1 { background-image: url(../img/jeju-info.png); }
+.pro2__top .pro2__img--1 { height: 66.3rem; background-image: url(../img/jeju-info.png); }
+
+.pro2__top .pro2__img--2 { height: 30rem; margin-top: 6rem; }
+
+.pro2__top .pro2__img--2 h5 { margin-bottom: 2rem; }
 
 .pro2 .dot--jj1 { background-color: #214f26; }
 
@@ -180,11 +184,11 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .dot--6 { background-color: #9fdae6; }
 
-.pro3 { width: 100vw; }
+.pro3 { width: 100%; }
 
-.pro3__top { width: 100vw; height: 100rem; background-color: #535353; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; position: relative; z-index: -1; color: #fff; }
+.pro3__top { width: 100%; height: 100rem; background-color: #535353; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; position: relative; z-index: -1; color: #fff; }
 
-.pro3__top::before { content: ""; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; background: url(../img/sun-mockup.png); opacity: 0.5; background-repeat: no-repeat; background-position: center; background-size: cover; z-index: -1; }
+.pro3__top::before { content: ""; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; background: url(../img/sun-mockup.jpg); opacity: 0.5; background-repeat: no-repeat; background-position: center; background-size: cover; z-index: -1; }
 
 .pro3__top h4 { margin-bottom: 2rem; }
 
@@ -193,6 +197,8 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 .pro3__top .pro3__img { width: 46.8rem; height: 66.3rem; background-repeat: no-repeat; background-position: center; background-size: cover; }
 
 .pro3__top .pro3__img--1 { background-image: url(../img/sun-illust.jpg); }
+
+.pro3__top .pro3__img--2 h5 { margin-bottom: 2rem; }
 
 .pro3__top .pro3__img--2 p, .pro3__top .pro3__img--2 span { display: block; }
 
