--- a/scss/pages/_project1.scss
+++ b/scss/pages/_project1.scss
@@ -1,8 +1,8 @@
 .pro1 {
-  width: 100vw;
+  width: 100%;
 
   &__top {
-    width: 100vw;
+    width: 100%;
     height: 100rem;
     background-color: $color--lightgray;
     @include flex;
