--- a/scss/pages/_project2.scss
+++ b/scss/pages/_project2.scss
@@ -1,8 +1,8 @@
 .pro2 {
-  width: 100vw;
+  width: 100%;
 
   &__top {
-    width: 100vw;
+    width: 100%;
     height: 100rem;
     background-color: $color--darkgray;
     @include flex;
@@ -25,15 +25,25 @@
 
     .pro2 {
       &__imgbox {
-        display: flex;
+        width: 100rem;
         margin-top: 4rem;
+        display: flex;
+        justify-content: space-between;
       }
       &__img {
         width: 46.8rem;
-        height: 66.3rem;
+        background-color: #000;
         @include bgimg;
         &--1 {
+          height: 66.3rem;
           background-image: url(../img/jeju-info.png);
+        }
+        &--2 {
+          height: 30rem;
+          margin-top: 6rem;
+          h5 {
+            margin-bottom: 2rem;
+          }
         }
       }
     }
