--- a/scss/pages/_project3.scss
+++ b/scss/pages/_project3.scss
@@ -1,8 +1,8 @@
 .pro3 {
-  width: 100vw;
+  width: 100%;
 
   &__top {
-    width: 100vw;
+    width: 100%;
     height: 100rem;
     background-color: $color--darkgray;
     @include flex;
@@ -13,7 +13,7 @@
 
     &::before {
       @include pseudo;
-      background: url(../img/sun-mockup.png);
+      background: url(../img/sun-mockup.jpg);
       opacity: 0.5;
       @include bgimg;
       z-index: -1;
@@ -36,6 +36,9 @@
           background-image: url(../img/sun-illust.jpg);
         }
         &--2 {
+          h5 {
+            margin-bottom: 2rem;
+          }
           p,
           span {
             display: block;
