--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,12 @@
 @import "pages/project2";
 @import "pages/project3";
 @import "pages/footer";
+
+@media (max-width: 480px) {
+  html {
+    font-size: 5px;
+  } // .panel:nth-of-type(4),
+  // .panel:nth-of-type(5) {
+  //   display: none;
+  // }
+}
