--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h6 { font-size: 2.4rem; font-weight: 700; }
 
 p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
-.gnb { width: 100%; height: 5rem; background-color: #fff; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; position: fixed; top: 0; z-index: 99; }
+.gnb { width: 100vw; height: 5rem; background-color: #fff; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; position: fixed; top: 0; z-index: 99; }
 
 .gnb__right, .gnb h5 { margin: 0 4rem; }
 
@@ -36,7 +36,7 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .wrapper { margin-top: 5rem; }
 
-.header { width: 100%; height: 60rem; background-image: url(../img/mainbg.png); background-color: #fff4e9; background-repeat: no-repeat; background-position: center; background-size: cover; background-size: contain; }
+.header { width: 100vw; height: 60rem; background-image: url(../img/mainbg.png); background-color: #fff4e9; background-repeat: no-repeat; background-position: center; background-size: cover; background-size: contain; }
 
 .header__txt { position: relative; top: 30%; left: 10%; }
 
@@ -76,7 +76,7 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .profile__bottom h6 { color: #929292; margin-bottom: 1.8rem; }
 
-.pro1 { width: 100%; }
+.pro1 { width: 100vw; margin: 0 auto; }
 
 .pro1__top { width: 100%; height: 100rem; background-color: #f7f7f7; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
 
@@ -144,7 +144,7 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .dot--3 { background-color: #f5af1b; }
 
-.pro2 { width: 100%; }
+.pro2 { width: 100vw; margin: 0 auto; }
 
 .pro2__top { width: 100%; height: 100rem; background-color: #535353; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; position: relative; z-index: -1; color: #fff; }
 
@@ -184,7 +184,7 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .dot--6 { background-color: #9fdae6; }
 
-.pro3 { width: 100%; }
+.pro3 { width: 100%; margin: 0 auto; }
 
 .pro3__top { width: 100%; height: 100rem; background-color: #535353; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; position: relative; z-index: -1; color: #fff; }
 
@@ -248,4 +248,10 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .arrow-up.show { opacity: 0.8; }
 
-@media (max-width: 480px) { html { font-size: 5px; } }
+@media (max-width: 992px) { html { font-size: 8px; } }
+
+@media (max-width: 600px) { html { font-size: 5px; }
+  .gnb { height: 10rem; } }
+
+@media (max-width: 460px) { html { font-size: 4px; }
+  .gnb { height: 10rem; } }
