--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,11 +7,27 @@
 @import "pages/project3";
 @import "pages/footer";
 
-@media (max-width: 480px) {
+@media (max-width: 992px) {
   html {
-    font-size: 5px;
+    font-size: 8px;
   } // .panel:nth-of-type(4),
   // .panel:nth-of-type(5) {
   //   display: none;
   // }
+}
+@media (max-width: 600px) {
+  html {
+    font-size: 5px;
+  }
+  .gnb {
+    height: 10rem;
+  }
+}
+@media (max-width: 460px) {
+  html {
+    font-size: 4px;
+  }
+  .gnb {
+    height: 10rem;
+  }
 }
