--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap");
 *, *::before, *::after { font-family: "Roboto", "Noto Sans KR", sans-serif; margin: 0; padding: 0; list-style: none; text-decoration: none; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+html, body { position: relative; overflow-x: hidden; }
+
 html { font-size: 62.5%; }
 
-body { width: 100vw; overflow-x: hidden; font: inherit; }
+body { width: 100vw; font: inherit; }
 
 h1 { font-size: 12rem; font-weight: 700; }
 
@@ -254,4 +256,5 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
   .gnb { height: 10rem; } }
 
 @media (max-width: 460px) { html { font-size: 4px; }
-  .gnb { height: 10rem; } }
+  .gnb { height: 10rem; }
+  .gnb__right li { font-size: 4rem; } }
