--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,9 @@
   .gnb {
     height: 10rem;
   }
-  .gnb__right li {
-    font-size: 4rem;
-  }
+  // .pro3__imgcontain {
+  //   width: 70%;
+  //   flex-wrap: wrap;
+  //   justify-content: space-around;
+  // }
 }
