--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .pro2 { width: 100vw; margin: 0 auto; }
 
-.pro2__top { width: 100%; height: 100rem; background-color: #535353; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; position: relative; z-index: -1; color: #fff; }
+.pro2__top { width: 100%; height: 100rem; background-color: #232323; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; position: relative; z-index: -1; color: #fff; }
 
 .pro2__top::before { content: ""; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; background: url(../img/jeju-mockup.png); opacity: 0.5; background-repeat: no-repeat; background-position: center; background-size: cover; z-index: -1; }
 
@@ -156,13 +156,15 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .pro2__top .pro2__imgbox { width: 100rem; margin-top: 4rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 
-.pro2__top .pro2__img { width: 46.8rem; background-color: #000; background-repeat: no-repeat; background-position: center; background-size: cover; }
+.pro2__top .pro2__img { width: 46.8rem; background-repeat: no-repeat; background-position: center; background-size: cover; }
 
 .pro2__top .pro2__img--1 { height: 66.3rem; background-image: url(../img/jeju-info.png); }
 
-.pro2__top .pro2__img--2 { height: 30rem; margin-top: 6rem; }
+.pro2__top .pro2__img--2 { margin-top: 20%; }
 
 .pro2__top .pro2__img--2 h5 { margin-bottom: 2rem; }
+
+.pro2__top .pro2__img--2 p, .pro2__top .pro2__img--2 span { display: block; line-height: 3rem; }
 
 .pro2 .dot--jj1 { background-color: #214f26; }
 
@@ -194,15 +196,17 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
 
 .pro3__top h4 { margin-bottom: 2rem; }
 
-.pro3__top .pro3__imgbox { display: -webkit-box; display: -ms-flexbox; display: flex; margin-top: 4rem; }
+.pro3__top .pro3__imgbox { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; margin-top: 4rem; }
 
 .pro3__top .pro3__img { width: 46.8rem; height: 66.3rem; background-repeat: no-repeat; background-position: center; background-size: cover; }
 
 .pro3__top .pro3__img--1 { background-image: url(../img/sun-illust.jpg); }
 
+.pro3__top .pro3__img--2 { width: 46.8rem; height: 26rem; margin-top: 20%; margin-right: 4rem; }
+
 .pro3__top .pro3__img--2 h5 { margin-bottom: 2rem; }
 
-.pro3__top .pro3__img--2 p, .pro3__top .pro3__img--2 span { display: block; }
+.pro3__top .pro3__img--2 p, .pro3__top .pro3__img--2 span { display: block; line-height: 3rem; }
 
 .pro3__top .pro3__img--2::after { width: 100%; height: 30rem; content: ""; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: #000; opacity: 0.5; top: 40%; z-index: -1; }
 
@@ -256,5 +260,4 @@ p, li, button, span { font-size: 1.6rem; font-weight: 300; }
   .gnb { height: 10rem; } }
 
 @media (max-width: 460px) { html { font-size: 4px; }
-  .gnb { height: 10rem; }
-  .gnb__right li { font-size: 4rem; } }
+  .gnb { height: 10rem; } }
