--- a/scss/pages/_project2.scss
+++ b/scss/pages/_project2.scss
@@ -5,7 +5,7 @@
   &__top {
     width: 100%;
     height: 100rem;
-    background-color: $color--darkgray;
+    background-color: #232323;
     @include flex;
     flex-direction: column;
     position: relative;
@@ -33,17 +33,20 @@
       }
       &__img {
         width: 46.8rem;
-        background-color: #000;
         @include bgimg;
         &--1 {
           height: 66.3rem;
           background-image: url(../img/jeju-info.png);
         }
         &--2 {
-          height: 30rem;
-          margin-top: 6rem;
+          margin-top: 20%;
           h5 {
             margin-bottom: 2rem;
+          }
+          p,
+          span {
+            display: block;
+            line-height: 3rem;
           }
         }
       }
