--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -83,7 +83,7 @@
   &__img {
     width: 39rem;
     height: 50rem;
-    // background-image: url(../img/profile.png);
+    background-image: url(../img/profile.png);
     @include bgimg;
     background-color: rgb(241, 137, 160);
 
