--- a/scss/pages/_project3.scss
+++ b/scss/pages/_project3.scss
@@ -9,7 +9,7 @@
     @include flex;
     flex-direction: column;
     position: relative;
-    z-index: -1;
+    //z-index: -1;
     color: $color--white;
 
     &::before {
@@ -17,15 +17,17 @@
       background: url(../img/sun-mockup.jpg);
       opacity: 0.5;
       @include bgimg;
-      z-index: -1;
+      //z-index: -1;
     }
 
     h4 {
+      z-index: 1;
       margin-bottom: 2rem;
     }
 
     .pro3 {
       &__imgbox {
+        z-index: 1;
         display: flex;
         justify-content: space-between;
         margin-top: 4rem;
@@ -34,6 +36,7 @@
         width: 46.8rem;
         height: 66.3rem;
         @include bgimg;
+
         &--1 {
           background-image: url(../img/sun-illust.jpg);
         }
@@ -42,6 +45,7 @@
           height: 26rem;
           margin-top: 20%;
           margin-right: 4rem;
+
           h5 {
             margin-bottom: 2rem;
           }
@@ -49,6 +53,20 @@
           span {
             display: block;
             line-height: 3rem;
+          }
+          .pro3__btn {
+            @include button;
+            width: 14rem;
+            background-color: transparent;
+            color: $color--white;
+            border-color: $color--white;
+            margin-top: 2rem;
+
+            &:hover,
+            &:active {
+              background-color: rgba($color: #000000, $alpha: 0.5);
+              cursor: pointer;
+            }
           }
           &::after {
             width: 100%;
@@ -64,6 +82,7 @@
     }
   }
   .dot {
+    z-index: 1;
     &--sm1 {
       background-color: #d97739;
     }
@@ -103,6 +122,7 @@
       height: 27.6rem;
       margin: 0 auto;
       @include bgimg;
+
       &--1 {
         background-image: url(../img/sun-1.png);
       }
